--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    name: "Build"
     runs-on: ubuntu-latest
     outputs:
       package-file-name: ${{ steps.build-package.outputs.package }}
@@ -33,6 +34,7 @@ jobs:
           path: ./*.tgz
 
   publish-to-github:
+    name: "Publish to GitHub"
     runs-on: ubuntu-latest
     needs: build
     steps:
