--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test:ui": "vitest --ui --watch",
     "lint": "eslint ."
   },
+  "publishConfig": {
+    "crispyricepc:registry": "https://npm.pkg.github.com"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
