--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,8 +34,8 @@ jobs:
           name: npm-package
           path: ./*.tgz
 
-  publish-to-github:
-    name: "Publish to GitHub"
+  publish-to-npm:
+    name: "Publish to NPM"
     runs-on: ubuntu-latest
     needs: build
     steps:
