--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "editlint",
   "type": "module",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "editlint lets you edit your eslint rules in bulk",
   "main": "./dist/index.js",
   "files": [
@@ -13,7 +13,7 @@
     "test:ui": "vitest --ui --watch",
     "lint": "eslint ."
   },
-  "keywords": [],
+  "keywords": ["eslint", "lint"],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
